@@ -150,9 +150,10 @@
 #define NEARPTRSIZE   port->s.near_ptr_size
 #define FARPTRSIZE    port->s.far_ptr_size
 #define GPTRSIZE      port->s.ptr_size
+#define FUNCPTRSIZE   port->s.funcptr_size
+#define BFUNCPTRSIZE  port->s.banked_funcptr_size
 #define BITSIZE       port->s.bit_size
 #define FLOATSIZE     port->s.float_size
-#define MAXBASESIZE   port->s.max_base_size
 
 #define  SMALL_MODEL  0
 #define  LARGE_MODEL  1
